when onTipAdded is called, the tip amount will be added to the current order

--- a/native-android-example-pos/src/main/res/layout-sw600dp/fragment_current_order.xml
+++ b/native-android-example-pos/src/main/res/layout-sw600dp/fragment_current_order.xml
@@ -161,6 +161,11 @@
         android:id="@+id/TaxLabel"
         android:layout_gravity="right"/>
     <TextView
+        android:text="@string/tip"/>
+    <TextView
+        android:id="@+id/TipLabel"
+        android:layout_gravity="right"/>
+    <TextView
         android:text="@string/total"
         android:textSize="24sp"/>
     <TextView
