tip will only show up once added

--- a/remote-pay-android-example-pos/src/main/res/layout/fragment_current_order.xml
+++ b/remote-pay-android-example-pos/src/main/res/layout/fragment_current_order.xml
@@ -161,6 +161,7 @@
         android:id="@+id/TaxLabel"
         android:layout_gravity="right"/>
     <TextView
+        android:id="@+id/TipLabelTitle"
         android:text="@string/tip"/>
     <TextView
         android:id="@+id/TipLabel"
