--- a/remote-pay-android-example-pos/src/main/res/layout/fragment_payment_details.xml
+++ b/remote-pay-android-example-pos/src/main/res/layout/fragment_payment_details.xml
@@ -68,7 +68,18 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="20sp"
-              android:gravity="right"/>
+              android:layout_marginEnd="20dp"/>
+          <Button
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:id="@+id/receiptsButton"
+              android:text="@string/receipts"
+              android:textStyle="bold"
+              android:textAllCaps="true"
+              android:background="@android:color/transparent"
+              android:textColor="@color/blue_text_40"
+              android:gravity="right"
+              />
         </LinearLayout>
         <LinearLayout
             android:id="@+id/PaymentDetailsPaymentSuccessfulRow"
@@ -237,8 +248,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
-                android:gravity="right"
+                android:layout_marginEnd="20dp"
                 android:textColor="@color/red_text"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/receiptsButtonRefund"
+                android:text="@string/receipts"
+                android:textStyle="bold"
+                android:textAllCaps="true"
+                android:background="@android:color/transparent"
+                android:textColor="@color/blue_text_40"
+                android:gravity="right"
+                />
           </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
