--- a/remote-pay-android-example-pos/src/main/res/values/colors.xml
+++ b/remote-pay-android-example-pos/src/main/res/values/colors.xml
@@ -28,7 +28,7 @@
   <color name="clover_green">#547554</color>
   <color name="warning_red">#A53434</color>
   <color name="light_purple">#A175DB</color>
-
+  <color name="blue_text_40">#42dff4</color>
   <color name="transparentblack">#80000000</color>
   <color name="transparentwhite">#80FFFFFF</color>
 
